--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,8 @@
 	<title>Foodie</title>
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,700;1,400&display=swap"
 		rel="stylesheet">
-	<script src="https://cdn.apple-mapkit.com/mk/5.x.x/mapkit.js"></script>
-	<link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
-
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+		integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
 </head>
 
 <body>
